ingress.yaml
### INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: all-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "25200"
  labels:
    app: ingress
spec:
  ########################### TLS uncomment when ready ################
  tls:
    - hosts:
        - "dev-gbanana.oneamo.com"
      secretName: "dev-grafana-test-tls"
  ################################ TLS ################################
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
    - host: dev-gbanana.oneamo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
